--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@vercel/og": "^0.5.20",
     "algoliasearch": "^4.20.0",
     "astro": "^3.3.0",
     "astro-icon": "^0.8.1",
