--- a/src/content/champions/saurabh-kaushik.yaml
+++ b/src/content/champions/saurabh-kaushik.yaml
@@ -1,16 +1,20 @@
 firstName: Saurabh
 lastName: Kaushik
-role: Associate Partner - Garage Sustainability Engineering Leader
+role: Program Director - Product Management - Data and AI Portfolio 
 organization: IBM
 languages: 
   - English
 pronoun: He/Him
 country: India
-city: Bangalore
-bio: Saurabh is an Engineering Leader with two decades of global experience in leading Product, Platform, and Practice organizations using Technical, Consulting, Architecture, Management, and Leadership skills with deep Cloud, Cognitive, Digital, and Sustainability solutions engineering capabilities. At IBM, he plays Garage Engineering role to help clients adopt Garage methods to Speed up their Value delivery through Best Practices of Solution & Platform Engineering.
+city: Bengaluru
+bio: |
+ Product Engineering and Management Leader with a proven track record of two decades driving the success of global Product, Platform, and Practice organizations. Expert in leveraging a Product Mindset, Engineering Excellence, and Growth Leadership to deliver innovative Cloud, Cognitive, and Digital solutions.
+
+ Currently driving Product Management of Data and AI Product and platform suite, focusing on building winning products and expanding the customer base through product-led growth, Generative AI infusion, and SaaS-based offerings.
+ Passionate about tackling Environmental Challenges posed by social and economic developments and finding win-win solutions to them. Currently, leading Green Software initiatives in Product Engineering in the current organization. 
 type: normal
 social:
   github: saurabhkaushik
   linkedin: saurabhkaushik
   twitter: saurabhkaushik
-  website: https://www.botreload.com/
+  website: https://medium.com/@saurabhkaushik
