--- a/src/content/champions/paola-annis.yaml
+++ b/src/content/champions/paola-annis.yaml
@@ -14,3 +14,35 @@ social:
   linkedin: paolaeva
   twitter: paolaannis
   website: https://nevermindthedigital.com/
+activities:
+  - contributionType: speaking
+    linkedGSFProject: Other/Unlisted
+    subtype: lighting-talk
+    dateFrom: 2023-10-09
+    dateTo: 2023-10-09
+    title: Roundable on sustainable software
+    description: A roundable on developing sustainable applications
+    url: https://youtu.be/haW6PfdLqUg
+    relatedEvent: CNCF Sustainability Week Milano
+  - contributionType: speaking
+    linkedGSFProject: Other/Unlisted
+    subtype: internal-event-talk
+    dateFrom: 2023-07-26
+    dateTo: 2023-07-26
+    title: Internal Workshop on Green software
+    relatedEvent: Microsoft Azure Coaching Hub - Eviden
+  - contributionType: speaking
+    linkedGSFProject: Community WG
+    subtype: online-talk
+    dateFrom: 2023-06-27
+    dateTo: 2023-06-27
+    title: Green Software Overview
+    url: https://www.linkedin.com/feed/update/urn:li:activity:7079359677536292865?updateEntityUrn=urn%3Ali%3Afs_feedUpdate%3A%28V2%2Curn%3Ali%3Aactivity%3A7079359677536292865%29
+    relatedEvent: DATEV Coding Festival
+  - contributionType: speaking
+    linkedGSFProject: Community WG
+    subtype: internal-event-talk
+    dateFrom: 2023-03-22
+    dateTo: 2023-03-22
+    title: Green software efficiency - how to make your Azure applications carbon aware to drive carbon and cost efficiency in the cloud
+    relatedEvent: Microsoft Code conference
