--- a/src/content/champions/yelle-lieder.yaml
+++ b/src/content/champions/yelle-lieder.yaml
@@ -9,10 +9,29 @@ pronoun: He/Him
 country: Germany
 city: Düsseldorf
 bio: |
- Yelle Lieder is a computer scientist and responsible for Sustainability Solutions at adesso SE as a Consultant for Digitalization and Sustainability. 
- He supports customers in achieving their sustainability goals in the areas of sustainability data, sustainable processes and systems, and sustainability innovations. 
- Previously, he was the managing director of a consulting firm specializing in startups, responsible for the operational business, and worked as a product manager in a Saas startup for several years.
+ Yelle Lieder is a computer scientist and works as a consultant for technology and sustainability at adesso SE. He supports customers in achieving their sustainability goals in the areas of sustainability data, sustainable processes and systems as well as sustainability innovations.
 type: normal
 social:
   github: yellelieder
   linkedin: lieder
+activities:
+  - contributionType: speaking
+    linkedGSFProject: Community WG
+    subtype: keynote
+    dateFrom: 2023-07-04
+    dateTo: 2023-07-04
+    title: Talk
+    subtitle: Digital sustainability in the healthcare sector
+    description: Keynote on digital sustainability in the healthcare sector at Green Health Forum
+    url: https://www.inno3.de/events/green-health-forum-2023
+    relatedEvent: Green Health Forum Dresden
+  - contributionType: speaking
+    linkedGSFProject: Community WG
+    subtype: online-talk
+    dateFrom: 2023-06-29
+    dateTo: 2023-06-29
+    title: Talk
+    subtitle: "Talk: Green Requirements Engineering"
+    description: Impulse talk and moderation of a breakout session on sustainability in the development of digital products with a focus on requirements engineering. 
+    url: https://www.youtube.com/watch?v=I2NbPfxBUUM&themeRefresh=1
+    relatedEvent: ASQF & IREB Roundtable - Software Engineering meets Sustainability
